--- a/IdentityApp/Pages/Identity/Admin/Roles.cshtml
+++ b/IdentityApp/Pages/Identity/Admin/Roles.cshtml
@@ -8,7 +8,8 @@
     <thead><tr><th colspan="2" class="text-center">Master Role List</th></tr></thead>
     <tbody>
         @foreach (IdentityRole role in Model.RoleManager.Roles) {
-            int userCount = (await Model.UserManager.GetUsersInRoleAsync(role.Name)).Count;
+@*             int userCount = (await Model.UserManager.GetUsersInRoleAsync(role.Name)).Count; *@
+            int userCount = 0;
             <tr>
                 <td>@role.Name</td>
                 <td>
